--- a/css/Style.css
+++ b/css/Style.css
@@ -83,6 +83,7 @@ a {
     border: none;
     padding:0;
     padding-left: 48px;
+    box-sizing: border-box;
 }
 
 .index-header .search:hover{
@@ -700,10 +701,12 @@ Main
 }
 
 .slide-item:nth-child(1){
+    background-color: #808080;
     background: url("../img/slider_drill.jpg") 100% 100% no-repeat;
 }
 
 .slide-item:nth-child(2){
+    background-color: #808080;
     background: url("../img/slider_perforator.jpg") 100% 100% no-repeat;
 }
 
@@ -749,11 +752,12 @@ Main
 .features-item a:active{
     background-color: rgba(0, 0, 0, 0.3);
 }
-.slide-menu {
+.slide-list {
     margin: 0;
     padding: 0;
     
     list-style: none;
+    background-image:grey 100% 100%;
 }
 
 .slide-list{
@@ -766,7 +770,7 @@ Main
     display: none;
 }
 
-.slide-item:nth-child(2){
+.slide-item:nth-child(1){
     display: block;
 }
 
@@ -792,7 +796,8 @@ Main
 }
 
 
-.button {
+.button,
+.slide-menu .button {
     display: block;
     width: 240px;
     padding: 13px 0;
@@ -808,7 +813,9 @@ Main
     border-radius: 3px;
     border: none;
 }
-
+.slide-menu .button{
+    background-color: #fb565a;
+}
 .button:hover,
 .button:focus {
     background-color: #ca2c37;
@@ -828,15 +835,17 @@ Main
     margin: 0;
     padding:0;
     margin-left: 2px;
+    
 }
 
 .goods-list {
-    width: 940px;
-    margin: 20px auto;
     list-style: none;
 }
 
 .goods-list ul{
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
 
     padding: 0px;
 }
@@ -845,8 +854,7 @@ Main
     position: relative;
     display: inline-block;
     width: 218px;
-    margin-right: 10px;
-    margin-bottom: 10px;
+    margin: 0;
     
     line-height: 20px;
     font-family:"ptsans", "Arial", "Arial Narrow", "sans-serif";
@@ -856,7 +864,7 @@ Main
     border: 1px solid #ccc;
 }
 
- .flag-new{
+.flag-new{
     position: absolute;
     top: -1px;
     right: -1px;
