--- a/css/Style.css
+++ b/css/Style.css
@@ -1033,7 +1033,7 @@ Main
 }  
  
 .populars h2{
-    font-weight: normal;;
+    font-weight: normal;
     text-transform: uppercase;
     margin-left: 28px;
     margin-top: 33px;
@@ -1041,22 +1041,59 @@ Main
 }
 
 .popular-producers ul{
+    box-sizing: border-box;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items:flex-start;
-    padding: 10px;
+    align-items: stretch;
+    padding: 0;
 }
 
 .producers-item{
+    display: flex;
     list-style: none;
-    margin: 10px 0;
-    width: 220px;
-    height: 145px;
-    border: grey 1px solid;
+    margin: 5px 0;
+    margin-bottom: 15px;
+    border: 1px solid #cccccc;
+    box-sizing: border-box;
+}
+
+.producers-item:hover,
+.producers-item:focus{
+    border: none;
+    box-shadow: 0px 7px 10px 6px #cccccc;
 }
 
 
+.producers-item:active{
+    opacity: 0.7;
+    border: none;
+    box-shadow: 0px 3px 7px 2px #cccccc;
+}
+
+.producers-item img,
+.producers-item a{
+    
+    margin:auto;
+    padding: 0;
+    display: inherit;
+}
+
+.producers-item a{
+    width: 220px;
+    height: 145px;
+}
+
+.producers-item:nth-last-child(1) a{
+    box-sizing: border-box;
+    padding-bottom: 10px;
+    padding-left:5px;
+}
+
+.producers-item:nth-last-child(5) a{
+    box-sizing: border-box;
+    padding-bottom: 15px;
+}
 
 .services p{
     font-family:"ptsans", "Arial", "Arial Narrow", "sans-serif";
