--- a/css/Style.css
+++ b/css/Style.css
@@ -877,6 +877,11 @@ Main
     border: 1px solid #ccc;
 }
 
+.goods-item:hover{
+    box-shadow: 0px 5px 12px 4px #cccccc;
+    border: none;
+}
+
 .flag-new{
     position: absolute;
     top: -1px;
@@ -1047,6 +1052,7 @@ Main
     justify-content: space-between;
     align-items: stretch;
     padding: 0;
+    margin-bottom: 85px;
 }
 
 .producers-item{
@@ -1088,6 +1094,11 @@ Main
     box-sizing: border-box;
     padding-bottom: 10px;
     padding-left:5px;
+}
+
+.producers-item:nth-last-child(2) a{
+    box-sizing: border-box;
+    padding-bottom: 5px;
 }
 
 .producers-item:nth-last-child(5) a{
