--- a/css/Style.css
+++ b/css/Style.css
@@ -58,7 +58,7 @@ body {
     margin: 0;
     padding: 0;
 
-    font-family:"cuprum", "Verdana", "Arial", "sans-serif";
+    font-family:"cuprum","Arial", "Verdana", "sans-serif";
     font-weight: 400;
     line-height: 24px;
     font-size: 13px;
@@ -219,6 +219,13 @@ main h2{
 
 
 .company-info h3 {
+    box-sizing: border-box;
+    padding-bottom: 10px;
+    margin-bottom: 0;
+    font-size: 30px;
+    line-height: 30px;
+    font-weight: normal;
+    text-transform: uppercase;
     font-size: 30px;
     color:#000000;
 }
@@ -226,6 +233,7 @@ main h2{
 .services{
     background-color: #f5f8fa;
     margin-top: 135px;
+    margin-bottom: 145px;
 }
 
 .services h3{
@@ -242,8 +250,20 @@ main h2{
 }
 
 .company-info li{
+    list-style: none;
+    position: relative;
     font-size: 18px;
     line-height: 20px;
+}
+.company-info li:before{
+    position: absolute;
+    content:"";
+    width: 25px;
+    height: 2px;
+    left: -30px;
+    top: 50%;
+    background-color: #ee3643;
+
 }
 
 .footer-top{
@@ -1199,7 +1219,7 @@ Main
 .services-wrapper{
     display: flex;
     justify-content: space-around;
-    margin-top: 71px;
+    margin-top: 66px;
 }
 
 .services-list{
@@ -1285,29 +1305,55 @@ Main
 }
 
 
-.company-info-wrapper{
+.company-info{
+    box-sizing: border-box;
+    padding-top: 2px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
-.company-info-wrapper li{
+.company-info li{
     list-style:;
     font-size:18px;
     line-height:20px;
 }
 
-.company-info-wrapper p{
+.company-info p{
+    box-sizing: border-box;
+    font-family:"ptsans", "Arial", "Arial Narrow", "sans-serif";
     display: block;
 }
 
 .company-column-1{
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     width: 535px;
 }
 
+.company-column-1 p:nth-of-type(1){
+    padding-top: 2px;
+}
+
+.company-column-1 p:nth-of-type(2){
+    width:400px ;
+    margin-bottom: 0;
+}
+
+
+.tk-list{
+    margin-top: 10px;
+    margin-bottom: 0;
+    padding-left: 30px;
+}
+
+.tk-list li{
+    padding:10px 0;
+}
+
 .company-column-2{
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     width: 301px;
 }
